vlib/v/checker/tests/struct_field_private_err.out
vlib/v/checker/tests/struct_field_private_err.vv:8:2: error: cannot access private field `x` on `amod.Bcg`
    6 | 
    7 | _ := amod.Bcg{
    8 |     x: 0
      |     ~~~~
    9 | }
   10 |
vlib/v/checker/tests/struct_field_private_err.vv:12:2: error: cannot access private field `x` on `amod.Bcg2[int]`
   10 | 
   11 | _ := amod.Bcg2[int]{
   12 |     x: 0
      |     ~~~~
   13 | }
   14 |
vlib/v/checker/tests/struct_field_private_err.vv:15:10: error: cannot access private field `bar` on `amod.FooParams`
   13 | }
   14 | 
   15 | amod.foo(bar: 'bar')
      |          ~~~~~~~~~~
   16 | 
   17 | foo := amod.new_private_foo(12)
vlib/v/checker/tests/struct_field_private_err.vv:18:9: error: field `v.checker.tests.amod.PrivateFoo.bar` is not public
   16 | 
   17 | foo := amod.new_private_foo(12)
   18 | _ = foo.bar
      |         ~~~
