vlib/v/checker/tests/struct_field_private_err.vv
import v.checker.tests.amod

_ := amod.Xyz{
	x: 0
}

_ := amod.Bcg{
	x: 0
}

_ := amod.Bcg2[int]{
	x: 0
}

amod.foo(bar: 'bar')

foo := amod.new_private_foo(12)
_ = foo.bar
